--- a/scnpart/galery.css
+++ b/scnpart/galery.css
@@ -5,25 +5,25 @@
 }
 
 body{
-    background: linear-gradient(#232526, #414345);
-    height: 100vh;
-    font-family: sans-serif, Helvetica,Arial;
+    background: linear-gradient(#3b2258, #1f1229);
+    height: 500vh;
+    font-family: cursive,sans-serif, Helvetica,Arial;
     display: flex;
     flex-direction: column;
-    overflow: hidden;
+    overflow-x: hidden;
 }
 
 .first-cnt{
-    background-color: #EC7063;
+    background-color: #63d7ec;
     margin-bottom: 10px;
-    height: 10%;
+    height: 19999mm;
     border-radius: 0 0 70px 70px;
     position: relative;
 }
 
 .first-cnt h2{
     letter-spacing: 3px;
-    color: #464343;
+    color: #fff;
     font-weight: bold;
     text-transform: uppercase;
     position: absolute;
@@ -32,17 +32,63 @@ body{
     transform: translate(46.5%,30%);
 }
 
-.gallery {
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-    grid-gap: 20px;
-  }
+audio{position: absolute;top:3%;left: -1.5%;}
 
-  .gallery-item {
-    width: 100%;
-    height: 200px;
-    background-color: #ccc;
-  }
+.container div{
+  margin-left: 6px;
+  margin-right: 6px;
+  display: grid;
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-gap: 20px; 
+}
+
+.gallery a{
+  height: 200px;
+  background-color: #ccc;
+  overflow: hidden;
+  border-radius: 10px;
+  border: 2px solid #000
+}
+
+.gallery img{
+  width: 100%;
+  height: 100%;
+}
+
+.gallery-item:hover{
+  background-color: transparent;
+}
+
+
+.imgr img{
+  transform: rotate(270deg);
+  width: 200%!important;
+  height: 270%;
+  object-position: 50% 50%;
+  margin-left: -60%;
+  margin-top: -40%;
+  object-fit: contain;
+}
+
+
+.imgw{
+  grid-column: 2 span;
+}
+
+.af img{
+  object-fit: cover!important;
+}
+
+.imgh{
+  grid-row: 2 span;
+  height: 100%!important;
+}
+
+.aft img{
+  object-fit: fill!important;
+  height: 200%!important;
+  margin-top: -10%!important;
+}
 
   /* Estilos para hacer la galería responsive */
   @media (max-width: 600px) {
